# MCPproject

./: README.md  azure_test.py  edit.txt  mcp_runner.py  mssql_runner.py  pyproject.toml  testing.py
src/mssqlserver/: __main__.py  server.py  stTseStkPrcd_schema.csv
src/pgserver/: __main__.py  server.py
src/wxserver/: server.py
