[project]
name = "pgserver"
version = "0.1.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "mcp>=1.12.0","openai>=1.25.0", ]

[tool.uv]              
index-url = "https://pypi.org/simple"

[build-system]
requires = [ "uv_build>=0.8.0,<0.9",]
build-backend = "uv_build"

[project.scripts]
pgserver = "pgserver:main"
